# Homework_C_2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions.yml
lib/sort_employee/: CMakeLists.txt  sort_employee.c
lib/utils/: CMakeLists.txt
lib/utils/include/: sort_employee.h  utils.h
lib/utils/src/: main.c  utils.c
test/: tests.cpp
